--- a/set.env
+++ b/set.env
@@ -1,14 +1,14 @@
-PREFIX=.
+PREFIX=
 AUTO_READ_STATUS=yes
 AUTO_DOWNLOAD_STATUS=yes
 PM_PERMIT=no
 BOT_NAME=𝕾𝖑𝖔𝖜𝖊𝖗 𝖌𝖔𝖖𝖙
 BOT_MENU_LINKS=https://i.pinimg.com/736x/0a/70/6f/0a706f90d6a1fb39919aedfbb7fdd8d3.jpg
-PUBLIC_MODE=yes
+PUBLIC_MODE=no
 HEROKU=no
 DATABASE_URL=postgresql://zokouve_user:PcNcDevxRd7TcKQPTerL954MB1bbMciX@dpg-cs9ku688fa8c73cbth20-a.oregon-postgres.render.com/zokouve
 OWNER_NAME=𝕾𝖑𝖔𝖜𝖊𝖗 ♕︎
-NUMERO_OWNER=50941964062
+NUMERO_OWNER=50932818924
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=yes
 PRESENCE=1
